# cat-gen

./: .gitignore  CLAUDE.md  INSPECTION_SUMMARY.md  README.md  SUPERCELL_BUG_ANALYSIS.md  SUPERCELL_BUG_FINDINGS.md  pyproject.toml  test_supercell_math.py
configs/default/: default.yaml  default_large.yaml  default_muon.yaml  feedback_loop.yaml  overfit.yaml  overfit_random_prior.yaml  overfit_small.yaml  test.yaml  train_10k_dng.yaml  train_10k_struct.yaml
configs/experiments/: ablation_all.yaml  ablation_baseline.yaml  ablation_ema.yaml  ablation_timesteps.yaml  overfit_10k_1_base.yaml  overfit_10k_2_high_lr.yaml  overfit_10k_3_no_reweight.yaml  overfit_10k_4_very_high_lr.yaml  overfit_500ep.yaml  overfit_500ep_1_baseline.yaml  overfit_500ep_2_high_lr.yaml  overfit_500ep_3_no_ema.yaml  overfit_500ep_4_multiplicity.yaml  overfit_baseline.yaml  overfit_l1_loss.yaml  overfit_muon.yaml  overfit_uniform_timestep.yaml
configs/optimizer/: adamw.yaml  muon.yaml
configs/original/: default.yaml  feedback_loop.yaml  test.yaml  train_10k_dng.yaml  train_10k_struct.yaml
configs/reimplementation/: default.yaml  feedback_loop.yaml  test.yaml  train_10k_dng.yaml  train_10k_struct.yaml
docs/: virtual_atoms_plan.md
scripts/: run_ablation_experiments.sh
scripts/compare/: run_feedback_loop.sh
scripts/data/: convert_oc20.sh  download_data.sh  download_mapping.sh  extract_metadata.sh  process_oc20.sh
scripts/evaluation/: run_overfit_eval.sh
scripts/training/: run_optimizer_comparison.sh  run_original.sh  run_overfit.sh  run_train.sh  (+4 more)
src/: primitive_atom_distribution.json
(+65 files in other folders)
