[project]
name = "cat-gen"
version = "0.1.0"
description = "Catalyst generation with Diffusion Transformers"
requires-python = ">=3.10"
dependencies = [
    # Core scientific computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "pytest>=7.3.0",
    "python-dotenv>=1.0.0",
    "h5py>=3.9.0",
    "einops>=0.6.0",
    "jsonlines>=3.1.0",
    # Deep learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "lightning>=2.0.0",
    "torch-geometric>=2.4.0",
    # Materials science
    "fairchem-core>=1.0.0",
    "e3nn>=0.5.0",
    "ase>=3.22.0",
    "pymatgen>=2024.1.0",
    # Data storage
    "lmdb>=1.4.0",
    "numba>=0.58.0",
    # Experiment tracking
    "wandb>=0.15.0",
    # Validation and parallel processing
    "pebble>=5.0.0",
    "smact>=2.5.0",
    # Optional (kept from template)
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "tokenizers>=0.13.0",
    "accelerate>=0.20.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "gdown>=5.2.0",
    "fairchem-data-oc>=1.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
